--- a/composer.json
+++ b/composer.json
@@ -4,14 +4,26 @@
     "phpunit/phpunit": "^9.5",
     "phploc/phploc": "^7.0",
     "pdepend/pdepend": "^2.10",
-    "phpmd/phpmd": "^2.10",
+    "phpmd/phpmd": "^2.12",
     "sebastian/phpcpd": "^6.0",
     "friendsofphp/php-cs-fixer": "^3.2",
     "phpcompatibility/php-compatibility": "^9.3",
-    "phpmetrics/phpmetrics": "^2.7",
+    "phpmetrics/phpmetrics": "^2.8",
     "phpstan/phpstan": "^1.1",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.2",
-    "friendsoftwig/twigcs": "^6.0"
+    "friendsoftwig/twigcs": "^6.0",
+    "mglaman/drupal-check": "^1.4",
+    "mortenson/psalm-plugin-drupal": "dev-master",
+    "palantirnet/drupal-rector": "^0.12.4",
+    "php-parallel-lint/php-console-highlighter": "^1.0",
+    "php-parallel-lint/php-parallel-lint": "^1.3",
+    "phpcompatibility/phpcompatibility-symfony": "^1.2",
+    "phpspec/phpspec": "^7.2",
+    "phpspec/prophecy-phpunit": "^2.0",
+    "povils/phpmnd": "^3.0",
+    "rskuipers/php-assumptions": "^0.8.1",
+    "vimeo/psalm": "^4.24",
+    "drupal/coder": "^8.3"
   },
   "config": {
     "allow-plugins": {
